# Lab_SEC_206_thanapol

assignments/: .gitignore  A1_INSTRUCTION.md  A2_INSTRUCTION.md  A3_INSTRUCTION.md  README.md  pyproject.toml
assignments/client_app/: __init__.py  api.py  app.py  channel.py  core.py  http_client.py  pinned_keys.py  storage.py
assignments/client_app/pinned_keys/: server_signing_public.pem
assignments/client_app/templates/: chat.html  debug.html  login.html  unlock.html
assignments/scripts/: reset_state.py  run_all.py  run_client_alice.py  run_client_bob.py  run_server.py
assignments/server_app/: __init__.py  app.py  auth.py  channel.py  message_service.py  signing_keys.py  storage.py
assignments/server_app/dev_keys/: server_signing_private.pem
assignments/server_app/templates/: debug.html
assignments/shared/: __init__.py  channel_crypto.py  passwords.py  storage_crypto.py
assignments/tests/: test_a2_unlock_flow.py  test_a3_insecure_channel.py  test_cookie_isolation.py  test_crypto_scaffold_contract.py  test_server_debug.py
lab-1/: main.py  pyproject.toml
lab-2/: lab_2a.py  lab_2b.py  pyproject.toml
lab-3/: lab_a.py  lab_b.py  pyproject.toml
lab-4/: main.py  pyproject.toml
lab-5/: main.py  pyproject.toml
