[project]
name = "insecure-messenger-scaffolding"
version = "0.2.0"
description = "A1-A3 client/server separated scaffolding"
requires-python = ">=3.11"
dependencies = [
  "flask>=3.1.2",
  "requests>=2.32.5",
  "pycryptodome>=3.23.0",
  "argon2-cffi>=25.1.0",
  "cryptography>=46.0.0",
]

[dependency-groups]
dev = [
  "pytest>=8.4.0",
]

[tool.uv]
package = false
